<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wezen.madison.com.wezen.madison.fragment.AddressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            class="com.google.android.gms.maps.SupportMapFragment"
            tools:layout="@layout/abc_action_bar_title_item"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_item_margin"
                card_view:cardCornerRadius="@dimen/cardview_default_radius"
                card_view:cardElevation="@dimen/cardview_default_elevation"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bright_foreground_material_dark"
                    android:orientation="vertical"
                    android:padding="@dimen/edittext_address_padding"

                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/street"
                        android:textSize="@dimen/madison_edit_text_size"
                        android:layout_marginBottom="@dimen/edittext_address_margin"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/number"
                        android:textSize="@dimen/madison_edit_text_size"
                        android:layout_marginBottom="@dimen/edittext_address_margin"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/district"
                        android:textSize="@dimen/madison_edit_text_size"
                        android:layout_marginBottom="@dimen/edittext_address_margin"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cp"
                        android:textSize="@dimen/madison_edit_text_size"
                        android:layout_marginBottom="@dimen/edittext_address_margin"
                        />
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/edittext_address_margin">

                    </Spinner>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/between_streets"
                        android:textSize="@dimen/madison_edit_text_size"
                        android:layout_marginBottom="@dimen/edittext_address_margin"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tel"
                        android:textSize="@dimen/madison_edit_text_size"
                        android:layout_marginBottom="@dimen/edittext_address_margin"
                        />
                    <!--<CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save_address"
                        android:textSize="@dimen/abc_text_size_small_material"
                        android:layout_marginBottom="@dimen/edittext_address_margin"/>

                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/continuar"/>-->



                </LinearLayout>

            </android.support.v7.widget.CardView>


        </ScrollView>

        </LinearLayout>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|bottom|right"
        android:src="@drawable/ic_content_add"
        fab:fab_colorNormal="#f00"
        fab:fab_colorPressed="#0f0"
        fab:fab_colorRipple="#00f"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:fillViewport="false"
        android:layout_margin="16dp"/>

</RelativeLayout>
